Smart UV project sometimes doesn't align the islands properly #116355

Closed
opened 2023-12-19 16:58:21 +01:00 by Adam Preisler · 3 comments

System Information
Operating system: Win11
Graphics card: 4090 RTX

Blender Version
image
Worked: (3.5)

Related issue
#110724

Short description of error
I've reported problems with the "Smart UV Project" operator's auto-align of the UV islands and they were fixed for the model that I supplied last time but now the issue seems to still be there for another mesh that I share here. Bug_Smart-UV-Project_Still-A-Problem.blend

Exact steps for others to reproduce the error
Open .blend, in the 3D view go to UV > Smart UV Project > OK
Then you can see that some of the islands are aligned horizontally and some are vertically. I am not sure why but they should all be aligned vertically and they used to be in Blender versions before 3.5.

Blender 4.0
Screen Shot 12-19-23 at 04.49 PM.JPG

Blender 3.3.12
Screen Shot 12-19-23 at 04.52 PM.JPG

image

**System Information** Operating system: Win11 Graphics card: 4090 RTX **Blender Version** ![image](/attachments/2260ae26-cc8e-42b0-aa87-8d06eb7d5a4b) Worked: (3.5) **Related issue** https://projects.blender.org/blender/blender/issues/110724 **Short description of error** I've reported problems with the "Smart UV Project" operator's auto-align of the UV islands and they were fixed for the model that I supplied last time but now the issue seems to still be there for another mesh that I share here. [Bug_Smart-UV-Project_Still-A-Problem.blend](/attachments/8463ef55-1015-4365-8e80-24b72ab36c7e) **Exact steps for others to reproduce the error** Open .blend, in the 3D view go to UV > Smart UV Project > OK Then you can see that some of the islands are aligned horizontally and some are vertically. I am not sure why but they should all be aligned vertically and they used to be in Blender versions before 3.5. Blender 4.0 ![Screen Shot 12-19-23 at 04.49 PM.JPG](/attachments/998f4d36-b24b-427c-9ce1-9b33454fbe35) Blender 3.3.12 ![Screen Shot 12-19-23 at 04.52 PM.JPG](/attachments/5bb9d279-25fc-493e-bb7c-3c0b8e91e9ba) ![image](/attachments/2cecb616-808d-49e7-8690-b434e1983b82)
Adam Preisler added the
Type
Report
Severity
Normal
Status
Needs Triage
labels 2023-12-19 16:58:22 +01:00
Member
cc @Chris_Blackbourn @brecht

That last screenshot looks odd, but the model for that is not attached so I can't investigate that. Can this be attached?

For the other case, it's not obvious that all islands should be oriented along the longest axis. For this model it makes sense. But it's not necessarily the most efficient way of packing, or the direction that a user would consider natural.

I don't think either the new or old packing method was designed to do this, it was mostly a side effect where depending on the model it may or may not work out like that.

The Pack Islands operator in the UV editor is the place where there is more control over the packing strategy. Using a different Rotation Method there seems like it orients the islands along the longest axis, but I think this is also somewhat accidental. Adding a rotation method that does this explicitly would be a good feature to add.

It's not obvious to me that Smart UV Project should be changed to work like that, whatever strategy we use there will be suboptimal for some model.

@ideasman42, do you have an opinion on the packing strategy for Smart UV Project?

That last screenshot looks odd, but the model for that is not attached so I can't investigate that. Can this be attached? For the other case, it's not obvious that all islands should be oriented along the longest axis. For this model it makes sense. But it's not necessarily the most efficient way of packing, or the direction that a user would consider natural. I don't think either the new or old packing method was designed to do this, it was mostly a side effect where depending on the model it may or may not work out like that. The Pack Islands operator in the UV editor is the place where there is more control over the packing strategy. Using a different Rotation Method there seems like it orients the islands along the longest axis, but I think this is also somewhat accidental. Adding a rotation method that does this explicitly would be a good feature to add. It's not obvious to me that Smart UV Project should be changed to work like that, whatever strategy we use there will be suboptimal for some model. @ideasman42, do you have an opinion on the packing strategy for Smart UV Project?

Smart UV Project (the original Python version) intentionally aligned islands vertically, for wood-grain for e.g. tended to be aligned more usefully - in general, I'll check on adding support back.

Smart UV Project (the original Python version) intentionally aligned islands vertically, for wood-grain for e.g. tended to be aligned more usefully - in general, I'll check on adding support back.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-10 02:34:58 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-01-10 03:25:40 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116355
No description provided.