UV: restore axis alignment support for Smart UV Project

Regression from porting "Smart UV Project" from Python to C
[0] which removed UV island alignment support.

Restore support by adding X/Y aligned rotation to UV pack. Vertical axis
alignment is the default for smart project matching previous behavior.

Resolves #116355.

[0]: 850234c1b10a828678f1b91001f2731db807f7e2